tests/ui/sentinel/sentinel_unknown_arg.rs
use feotest::sentinel;

#[sentinel(foo = "bar")]
#[derive(Default)]
struct Spec;

fn main() {}
